[package]
name = "twenty-twenty"
version = "0.1.0"
authors = ["Andrés Medina <andresnrx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
regex = "1.5.4"
lazy_static = "1.4.0"
bitvec = "0.22.3"
